--- a/content/index.html
+++ b/content/index.html
@@ -1,14 +1,8 @@
 ---
-title: Home
+title: "Japan nanoc Users Group"
 ---
 
-<h1>A Brand New nanoc Site</h1>
+Japan nanoc Users Group へようこそ！
+------------------------------------
 
-<p>You’ve just created a new nanoc site. The page you are looking at right now is the home page for your site. To get started, consider replacing this default homepage with your own customized homepage. Some pointers on how to do so:</p>
-
-<ul>
-  <li><p><strong>Change this page’s content</strong> by editing the “index.html” file in the “content” directory. This is the actual page content, and therefore doesn’t include the header, sidebar or style information (those are part of the layout).</p></li>
-  <li><p><strong>Change the layout</strong>, which is the “default.html” file in the “layouts” directory, and create something unique (and hopefully less bland).</p></li>
-</ul>
-
-<p>If you need any help with customizing your nanoc web site, be sure to check out the documentation (see sidebar), and be sure to subscribe to the discussion group (also see sidebar). Enjoy!</p>
+Japan nanoc Users Groupは、日本のnanocユーザーのコミュニティです。日本でのnanocの普及と、nanocの日本語情報拡充を主な目的としています。
