edit jnanoc site

--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,8 @@
 ---
-title: "Japan nanoc Users Group"
+title: "Japan nanoc Users&#039; Group"
 ---
 
-Japan nanoc Users Group へようこそ！
+日本nanocユーザ会へようこそ！
 ------------------------------------
 
-Japan nanoc Users Groupは、日本のnanocユーザーのコミュニティです。日本でのnanocの普及と、nanocの日本語情報拡充を主な目的としています。
+日本nanocユーザ会（Japan nanoc Users&#039; Group）は、日本のnanocユーザーのコミュニティです。日本でのnanocの普及と、nanocの日本語情報拡充を主な目的としています。
