create archives page

--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,4 @@
 ---
-title: "Japan nanoc Users&#039; Group"
+title: "日本nanocユーザ会へようこそ！"
 ---
 
-日本nanocユーザ会へようこそ！
-------------------------------------
-
-日本nanocユーザ会（Japan nanoc Users&#039; Group）は、日本のnanocユーザーのコミュニティです。日本でのnanocの普及と、nanocの日本語情報拡充を主な目的としています。
